trunk/Archive2/fc/4f042966da45e5/output
main.cpp:16:5: error: no matching function for call to 'foo'
    foo(&bar);
    ^~~
main.cpp:5:6: note: candidate template ignored: substitution failure [with ARGS1 = <>, ARGS2 = <>]
void foo(void (*)(ARGS1..., ARGS2...))
     ^
1 error generated.
